tests/baselines/reference/classAbstractAccessor.errors.txt
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractAccessor.ts(3,17): error TS1318: An abstract accessor cannot have an implementation.
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractAccessor.ts(4,17): error TS1050: A 'set' accessor must have a corresponding 'get' accessor.
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractAccessor.ts(5,17): error TS1050: A 'set' accessor must have a corresponding 'get' accessor.
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractAccessor.ts(5,17): error TS1318: An abstract accessor cannot have an implementation.


==== tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractAccessor.ts (4 errors) ====
    abstract class A {
       abstract get a();
       abstract get aa() { return 1; } // error
                    ~~
!!! error TS1318: An abstract accessor cannot have an implementation.
       abstract set b(x: string);
                    ~
!!! error TS1050: A 'set' accessor must have a corresponding 'get' accessor.
       abstract set bb(x: string) {} // error
                    ~~
!!! error TS1050: A 'set' accessor must have a corresponding 'get' accessor.
                    ~~
!!! error TS1318: An abstract accessor cannot have an implementation.
    }
    